force-app/main/default/objects/Payment_Gateway__mdt/fields/Bill_Desk_GST_Checksum_Key__c.field-meta.xml
<CustomField>
    <fullName>Bill_Desk_GST_Checksum_Key__c</fullName>
    <label>Bill Desk GST Checksum Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>