force-app/main/default/objects/Payment_Gateway__mdt/fields/Bill_Desk_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_Desk_Merchant_ID__c</fullName>
    <label>Bill Desk Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>