force-app/main/default/objects/Payment_Gateway__mdt/fields/GST_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>GST_Account_Id__c</fullName>
    <label>GST Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>