force-app/main/default/objects/Payment_Gateway__mdt/fields/Merchant_Commission__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Commission__c</fullName>
    <label>Merchant Commission</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>