force-app/main/default/objects/Payment_Gateway__mdt/fields/Merchant_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number__c</fullName>
    <label>Merchant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>