force-app/main/default/objects/Payment_Gateway__mdt/fields/Project_Towers__c.field-meta.xml
<CustomField>
    <fullName>Project_Towers__c</fullName>
    <label>Project Towers</label>
    <referenceTo>Project_Towers__mdt</referenceTo>
    <relationshipLabel>Payment Gateway</relationshipLabel>
    <relationshipName>Payment_Gateway</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>